# pre-commit-mirror-maker

./: .coveragerc  .pre-commit-config.yaml  Pipfile  pyproject.toml  setup.py
pre_commit_mirror_maker_redux/: languages.py  main.py  make_repo.py
